--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ mixpanel.init("7daebe856494e3f0080ecb3b51c7cf1a");</script><!-- end Mixpanel -->
 </head>
 <body>
   <div id="main">
-    Hello world!
+    GO AWAY !!!
     <div id="header" class="center-content clear-fix">
       <ul id="topContacts" class="flex-box"></ul>
     </div>
